# open-source-python

./: LICENSE  README.md  component.md  pull_request_template.md  pyproject.toml  requirements.txt  static_analysis_explanation.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
OPSD-project/src/opsd_project/: __init__.py
inbox_client/: gmail_client_interface.py
src/: calculator.py  logger.py  notifier.py
src/calculator/calculator/: __init__.py  calculator_impl.py
src/calculator/tests/: test_calculator.py
src/calculator_component/: README.md  main.py  pyproject.toml  test_unit.py  unit_test.py
src/logger/logger/: __init__.py  logger_impl.py
src/logger/tests/: test_logger.py
src/logger_component/: README.md  pyproject.toml  unit_test.py
src/notifier/notifier/: __init__.py  notifier_impl.py
src/notifier/tests/: test_notifier.py
src/notifier_component/: README.md  pyproject.toml  unit_test.py
tests/: test_calculator.py  test_end_to_end.py  test_integration_calculator_logger.py  test_integration_logger_notifier.py  test_logger.py  test_notifier.py
